@@ -1,5 +1,6 @@
 Version 4.0.x:
 
+* Allow overriding device names for hard drive directories.
 * New options midi_in_device, midi_out_device, midi_mt32_device.
 * Read Data/Devs/Controllers/gamecontrollerdb.txt.
 * Updated libslirp to version 4.6.1.
